# mp-little-boat

./: .editorconfig  .gitignore
src/: CMakeLists.txt  vcpkg.json
src/Common/logger/: LoggerChannel.h
src/KitchenSink/: CMakeLists.txt  FltkAll.h  KitchenSinkWindow.cpp  KitchenSinkWindow.h  main.cpp
src/KitchenSink/UI/: MainWindowDataTable.h  MainWindowFFMpeg.cpp  MainWindowFFMpeg.h  MainWindowFlex.h  MainWindowFltkSlider.h  MainWindowFltkTable.h  MainWindowFltkTextBuffer.h  MainWindowFltkTextEditor.h  MainWindowFltkThemes.h  MainWindowFltkTree.h  MainWindowFltkTreeOfTables.h  MainWindowGrid.h  MainWindowList.h  MainWindowPanel.h  MainWindowPickers.h
src/Libs/: CMakeLists.txt
src/Libs/Buffering/: CMakeLists.txt
src/Libs/FltkExt/: CMakeLists.txt  FltkExt.h
src/Libs/FltkExt/Containers/: BaseScrolledGrid.cpp  BaseScrolledGrid.h  Container.cpp  Container.h  ContainerProps.h  Flex.cpp  Flex.h  Grid.cpp  Grid.h  Layout.cpp  Layout.h  List.cpp  List.h  Margin.h  Panel.cpp  Panel.h  Splitter.cpp  Splitter.h  TabbedPanel.cpp  TabbedPanel.h
src/Libs/FltkExt/Controls/: DateTimePicker.cpp  DateTimePicker.h  DateTimePickerButton.cpp  DateTimePickerButton.h  DateTimePickerView.cpp  DateTimePickerView.h  DateTimeSettings.cpp  DateTimeSettings.h  Picker.cpp  Picker.h
src/Libs/FltkExt/Data/: DataRecord.h  DataStore.cpp  DataStore.h  DataTable.cpp  DataTable.h  IDataListener.h
src/Libs/ModuleContainer/: CMakeLists.txt  IModuleContainer.h  IModuleContainerBuilder.h
src/Libs/ModuleContainer/private/: ModuleContainer.cpp  ModuleContainer.h
src/Libs/ModuleManager/: CMakeLists.txt  IModuleManager.h
src/Libs/ModuleManager/private/: ModuleManager.cpp  ModuleManager.h
src/LittleBoat/: LittleBoat.sln
src/LittleBoat/Common/core/: Kernel.h  Settings.h
src/LittleBoat/Common/std/: ProxyVectorStream.h
src/LittleBoat/LittleBoat/: ChildFrm.cpp  ChildFrm.h  ClassView.cpp  FileView.cpp  LittleBoat.aps  LittleBoat.cpp  LittleBoat.h  LittleBoat.rc  LittleBoat.vcxproj  LittleBoat.vcxproj.filters  LittleBoatDoc.cpp  LittleBoatDoc.h  LittleBoatView.cpp  LittleBoatView.h  MainFrm.cpp  MainFrm.h  PropertiesWnd.cpp  ViewTree.cpp
src/LittleBoat/LittleBoat/Logger/: ILoggerManager.h  LoggerChannel.cpp
src/LittleBoat/LittleBoat/framework/: Resource.h  targetver.h
src/LittleBoat/LittleBoat/res/: LittleBoat.rc2  ribbon.mfcribbon-ms
src/Modules/: CMakeLists.txt
src/Modules/ModuleContainer/: CMakeLists.txt  IModuleContainer.h  IModuleContainerFactory.h
src/Modules/ModuleContainer/private/: ModuleContainer.cpp  ModuleContainer.h  ModuleContainerFactory.cpp
src/Modules/StreamingContainer/: CMakeLists.txt  IStreamingContainer.h  IStreamingContainerFactory.h  StreamingContainerBuilder.cpp  StreamingContainerBuilder.h
src/Modules/StreamingContainer/private/: Codec.cpp  Codec.h  FormatContext.cpp  FormatContext.h  StreamingContainer.cpp  StreamingContainer.h  StreamingContainerBuilder.cpp  StreamingContainerBuilder.h  StreamingContainerFactory.cpp  pch.h
src/Modules/StreamingContainer/private/FFMpeg/: FFMpegError.cpp  FFMpegError.h  PipeContext.cpp  PipeContext.h  RegisterAvFormatPipe.cpp  RegisterAvFormatPipe.h  RegisterCodecsPipe.cpp  RegisterCodecsPipe.h  RegisterDecoderPipe.cpp  RegisterDecoderPipe.h  hardware.h
src/Modules/StreamingContainer/private/Pipeline/: Pipe.cpp  Pipe.h  PipeContext.h  Pipeline.cpp  Pipeline.h
src/Navigator/: CMakeLists.txt  MainFrame.cpp  MainFrame.h  main.cpp
src/Navigator/Controls/: Icons.h
src/Navigator/Controls/Containers/: Flex.cpp  Flex.h
src/Navigator/Controls/Files/: FilesData.cpp  FilesData.h  FilesPanel.cpp  FilesPanel.h  FilesTable.cpp  FilesTable.h
src/Navigator/Controls/Toolbars/: ToolButton.cpp  ToolButton.h  Toolbar.cpp  Toolbar.h  ToolbarGlobalApps.cpp  ToolbarGlobalApps.h
src/Navigator/framework/: pch.h
src/Resources/: Icons.h
src/Resources/Icons/11x11/: open_level.xpm
src/Tests/UI/: CMakeLists.txt  FltkAll.h  MainWindowDataTable.h  MainWindowFlex.h  MainWindowFltkSlider.h  MainWindowFltkTextEditor.h  MainWindowFltkThemes.h  MainWindowFltkTree.h  MainWindowFltkTreeOfTables.h  MainWindowGrid.h  MainWindowList.h  MainWindowPanel.h  MainWindowPickers.h  MainWindowSplitBar.h  MainWindowThemes.h  main.cpp
src/cmake/: default-libs.cmake  default-modules.cmake  framework.cmake
src/cmake/libs/: ffmpeg.cmake  fltk.cmake  poco.cmake
